--- a/salty-hackers/package.json
+++ b/salty-hackers/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.1.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.0.1",
