--- a/salty-hackers/package.json
+++ b/salty-hackers/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "core-js": "^3.6.4",
     "formik": "^2.1.4",
+    "is": "^3.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
